--- a/GEMFILE
+++ b/GEMFILE
@@ -1,13 +1,6 @@
 source "https://rubygems.org"
-gemspec :name => "dotenv"
-gemspec :name => "dotenv-rails"
 
-group :guard do
-  gem "guard-rspec"
-  gem "guard-bundler"
-  gem "rb-fsevent"
-end
+gem 'httparty'
+gem 'awesome_print'
+gem 'pry-byebug'
 
-platforms :rbx do
-  gem "rubysl", "~> 2.0" # if using anything in the ruby standard library
-end
